// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedSquare renders correctly 1`] = `
<View
  renderToHardwareTextureAndroid={true}
  shouldRasterizeIOS={true}
  style={
    Object {
      "backgroundColor": "purple",
      "borderRadius": 10,
      "flex": 1,
      "margin": 4,
      "opacity": 0,
      "transform": Array [
        Object {
          "scale": 0.5,
        },
        Object {
          "rotateY": "-90deg",
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
/>
`;

exports[`GameScene renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ],
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  >
    <View
      renderToHardwareTextureAndroid={true}
      shouldRasterizeIOS={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 10,
          "flex": 1,
          "margin": 4,
          "opacity": 0,
          "transform": Array [
            Object {
              "scale": 0.5,
            },
            Object {
              "rotateY": "-90deg",
            },
            Object {
              "perspective": 1000,
            },
          ],
        }
      }
    />
  </View>
</View>
`;

exports[`SingleSquare renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ],
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  >
    <View
      renderToHardwareTextureAndroid={true}
      shouldRasterizeIOS={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 10,
          "flex": 1,
          "margin": 4,
          "opacity": 0,
          "transform": Array [
            Object {
              "scale": 0.5,
            },
            Object {
              "rotateY": "-90deg",
            },
            Object {
              "perspective": 1000,
            },
          ],
        }
      }
    />
  </View>
</View>
`;
